# skillpack

./: .pre-commit-config.yaml  AGENTS.md  README.md
.codex/docs/: agent-skills.md  openai-skills-create.md  skill-authoring-guidance.md  skillpack-workflow.md  skillpack.md
.codex/plans/: tui-pack-editor.md
.github/workflows/: ci.yml  release.yml
crates/skillpack/: Cargo.toml
crates/skillpack/src/: bundled.rs  cli.rs  config.rs  discover.rs  errors.rs  git.rs  install.rs  lib.rs  main.rs  output.rs  pack.rs  patterns.rs  resolve.rs  state.rs  util.rs
crates/skillpack/src/output/: helpers.rs  printer.rs  styles.rs  types.rs
crates/skillpack/tests/: cli.rs  imports.rs  install.rs  resolve.rs  state.rs
npm/skillpack/: README.md  install.js  package.json
packs/: general.yaml  skillpack.yaml
skills/ado-pr-review/scripts/: ado_failed_pipelines.py
skills/code-review/ado-pr-review/: SKILL.md
skills/code-review/ado-pr-review/scripts/: ado_pr_threads.py
skills/code-review/github-fix-code-review/: SKILL.md
skills/code-review/github-fix-code-review/scripts/: gh_pr_threads.py
skills/dotnet-file-scripts/: SKILL.md
skills/memory/agent-memory/: SKILL.md
skills/tools/curl-fetch-sample/: SKILL.md
