[package]
name = "skillpack"
version = "0.1.2"
edition = "2024"
autobins = false

[[bin]]
name = "sp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.3"
clap = { version = "4.5.54", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
shellexpand = "3.1.1"
tempfile = "3.24.0"
thiserror = "2.0.18"
time = { version = "0.3.45", features = ["formatting"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.1.2"
assert_fs = "1.1.3"
predicates = "3.1.3"
