[package]
name = "skillpack"
version = "0.2.1"
edition = "2024"
autobins = false

[[bin]]
name = "sp"
path = "src/main.rs"

[dependencies]
blake3 = "1.8.3"
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
globset = "0.4.16"
include_dir = "0.7.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
shellexpand = "3.1.1"
owo-colors = "4"
tempfile = "3.24.0"
time = { version = "0.3.45", features = ["formatting"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.1.2"
assert_fs = "1.1.3"
predicates = "3.1.3"
